# Daedalus

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/core/: Cargo.toml  README.md
crates/core/src/: clock.rs  compute.rs  errors.rs  ids.rs  lib.rs  messages.rs  metadata.rs  metrics.rs  policy.rs  stable_id.rs  sync.rs
crates/daedalus/: Cargo.toml  README.md
crates/daedalus/assets/: binary.wgsl  binary_state.wgsl  edges.wgsl  morph.wgsl  texture_sample.wgsl
crates/daedalus/examples/: blur_node.rs  cpu_branch.rs  cpu_image.rs  cpu_pipeline.rs  cpu_stateful.rs  cpu_text.rs  fanin_merge.rs  fanin_mixed.rs  fanin_multi.rs  generic_add.rs  gpu_image.rs  gpu_segments.rs  gpu_shader_nodes.rs  graph_json.rs  graph_node.rs  graph_patch.rs  injected_graph_metadata.rs  location_metadata.rs  math_ops.rs  metadata_defaults.rs  metadata_source.rs  nested_graph.rs  sync_policies.rs  typed_any.rs
crates/daedalus/src/: host_bridge.rs  lib.rs
crates/daedalus/tests/: adapt_macro.rs  docker_examples.rs  example_imports.rs  fanin_inputs_macro.rs  stateful_node_isolation.rs  transport_macro_ui.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: main.rs  service.rs
crates/data/: Cargo.toml  README.md
crates/data/benches/: resolver.rs
crates/data/src/: convert.rs  convert_tests.rs  daedalus_type.rs  descriptor.rs  errors.rs  gpu.rs  json.rs  lib.rs  model.rs  named_types.rs  proto.rs  schema.rs  to_value.rs  typing.rs  units.rs
crates/engine/: Cargo.toml  README.md
crates/engine/benches/: plan_cache.rs  warm_engine.rs
crates/engine/src/: cache.rs  compiled_run.rs  config.rs  diagnostics.rs  engine.rs  engine_execution.rs  error.rs  host_graph.rs  lib.rs  main.rs  prepared_plan.rs
crates/engine/tests/: config_validation.rs  engine_integration.rs  engine_smoke.rs  json_snapshots.rs  plan_cache.rs  registry_inspection.rs  transport_run.rs
crates/ffi/: Cargo.toml  README.md  feature-matrix.md  sdk-authoring.md  sdk_descriptor_snapshots.py
crates/ffi/core/: Cargo.toml  README.md
crates/ffi/cpp/: Cargo.toml  README.md
crates/ffi/examples/: README.md  bench_graph.rs  ffi_signature_matrix.rs  generated_py_image_plugin.rs  generated_py_plugin.rs  load_python_manifest.rs  manifest_shader_harness.rs  multi_lang_opencv_pipeline.rs  plugin_clahe_passthrough.rs  plugin_enum_mode.rs  plugin_grayscale_arc.rs  plugin_lib.rs  plugin_nested.rs  plugin_nested_host.rs  run_clahe_passthrough.rs  run_enum_mode.rs  run_graph_json.rs  run_graph_json_helios.rs  run_grayscale_arc.rs  run_image_roundtrip.rs  run_mixed_plugin.rs  run_rust_plugin.rs
crates/ffi/host/: Cargo.toml  README.md
crates/ffi/java/: Cargo.toml  README.md
crates/ffi/node/: Cargo.toml  README.md
crates/ffi/python/: Cargo.toml  README.md
crates/ffi/src/: bridge.rs  c_cpp.rs  contracts.rs  cpp_pack.rs  dispatch.rs  java.rs  lib.rs  manifest.rs  node.rs  plugin.rs  python.rs  shader_manifest.rs
crates/ffi/tests/: cpp_manifest_roundtrip.rs  cpp_pack_bundle_suite.rs  java_pack_bundle_suite.rs  manifest_feature_suite.rs  manifest_shader_suite.rs  manifest_subprocess_roundtrip.rs  node_pack_bundle_suite.rs  node_ts_emitter_suite.rs  node_ts_pack_bundle_suite.rs  python_manifest_roundtrip.rs  python_pack_bundle_suite.rs  rust_plugin_boundary.rs  structured_subprocess_roundtrip.rs
crates/gpu/: Cargo.toml  README.md
crates/gpu/benches/: dispatch_readback.rs
crates/gpu/src/: async_api.rs  buffer.rs  convert.rs  handles.rs  lib.rs  mock.rs  noop.rs  selection.rs  shader.rs  traits.rs  wgpu_backend.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: adapt_impl.rs  branch_payload_derive.rs  config_derive.rs  daedalus_type_derive.rs  device_impl.rs  gpu_state_derive.rs  helpers.rs  lib.rs  node_fn_impl.rs  node_handler_impl.rs  plugin_impl.rs  to_value_derive.rs  type_key_impl.rs
crates/nodes/: Cargo.toml  README.md
crates/nodes/src/: bundle_demo.rs  bundle_starter.rs  bundle_utils.rs  lib.rs  planner_adapter.rs  registry_adapter.rs
crates/nodes/tests/: planner_runtime.rs  ui.rs
crates/planner/: Cargo.toml  README.md
crates/planner/src/: debug.rs  diagnostics.rs  graph.rs  helpers.rs  lib.rs  metadata.rs  patch.rs
crates/planner/tests/: fanin_ports.rs  host_bridge_generic_infer.rs  node_execution_kind.rs  order_property.rs  plan_golden.rs  structural_convert.rs
crates/registry/: Cargo.toml  README.md
crates/registry/benches/: lookup.rs
crates/registry/src/: bundle.rs  capability.rs  capability_tests.rs  convert.rs  diagnostics.rs  ffi.rs  ids.rs  lib.rs  plugin.rs  prelude.rs  store.rs
crates/runtime/: Cargo.toml  PLAN.md  README.md
crates/runtime/benches/: executor_snapshot.rs
crates/runtime/src/: capabilities.rs  config.rs  convert.rs  debug.rs  fanin.rs  graph_builder.rs  graph_builder_scope_tests.rs  handles.rs  (+15 more)
crates/transport/: Cargo.toml  README.md
crates/wgsl-infer/: Cargo.toml  README.md
examples/: Cargo.toml
examples/00_quickstart/: bounded_streaming_io.rs  direct_host_lane.rs  gpu_fallback.rs  runtime_config.rs  strict_builder_roundtrip.rs  typed_cpu_graph.rs
examples/01_basics/: fanout.rs  hello_graph.rs  mutable_payload.rs  typed_handle_graph.rs  typed_ports.rs
examples/02_engine_config/: backpressure.rs  demand_driven.rs  edge_policies.rs  fail_fast.rs  gpu_backend.rs  metrics_levels.rs  pool_size.rs  runtime_modes.rs
examples/03_transport/: adapter_path.rs  payload_residency.rs  plan_explain.rs  shared_fanout.rs  zero_copy_chain.rs
examples/04_async/: async_demand_select.rs  async_event_driven.rs  styx_camera_graph.rs
examples/06_metrics_debugging/: backpressure_diagnostics.rs  lifecycle_trace.rs  observability.rs  overhead_floor.rs  ownership_metrics.rs  plan_debug.rs  runtime_metrics.rs  stream_diagnostics.rs  transport_metrics.rs
examples/07_gpu/: contrast_boost.wgsl  gpu_fallback.rs  gpu_node.rs  mixed_cpu_gpu.rs  upload_download.rs
examples/08_ffi/: README.md
examples/plugins/: README.md
plugins/example_project/: Cargo.toml
plugins/images/: Cargo.toml
plugins/math/: Cargo.toml
(+467 files in other folders)
