[workspace]
members = [
    "crates/daedalus",
    "crates/core",
    "crates/data",
    "crates/wgsl-infer",
    "crates/gpu",
    "crates/registry",
    "crates/planner",
    "crates/runtime",
    "crates/macros",
    "crates/nodes",
    "crates/engine",
    "crates/ffi",
    "plugins/images",
    "plugins/math",
    "plugins/example_project",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "1.0.0"
authors = ["Mathias Petersen"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Prometheus-Dynamics/Daedalus"
homepage = "https://github.com/Prometheus-Dynamics/Daedalus"
rust-version = "1.85"

[workspace.dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = { version = "2.10.0", features = ["serde"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
criterion = "0.8.1"
crossbeam-queue = "0.3.12"
glob = "0.3.3"
log = "0.4"
once_cell = "1.21.3"
paste = "1.0.15"
pollster = "0.4.0"
proptest = "1.9.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_path_to_error = "0.1.20"
smallvec = { version = "1.15.1", features = ["serde"] }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "macros", "sync"] }
trybuild = "1.0.114"
wgpu = { version = "27.0.1", default-features = false, features = ["std", "wgsl", "vulkan", "gles"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
image = "0.25.9"
