[workspace]
members = [
    "crates/daedalus",
    "crates/core",
    "crates/transport",
    "crates/data",
    "crates/wgsl-infer",
    "crates/gpu",
    "crates/registry",
    "crates/planner",
    "crates/runtime",
    "crates/macros",
    "crates/nodes",
    "crates/engine",
    "crates/daemon",
    "crates/ffi/core",
    "crates/ffi/host",
    "crates/ffi/python",
    "crates/ffi/node",
    "crates/ffi/java",
    "crates/ffi/cpp",
    "examples",
    "examples/plugins/math",
    "examples/plugins/example_project",
    "examples/plugins/framelease",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "2.0.0"
authors = ["Mathias Petersen"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Prometheus-Dynamics/Daedalus"
homepage = "https://github.com/Prometheus-Dynamics/Daedalus"
rust-version = "1.90"

[workspace.dependencies]
daedalus = { package = "daedalus-rs", path = "crates/daedalus", version = "2.0.0" }
daedalus-core = { path = "crates/core", version = "2.0.0" }
daedalus-transport = { path = "crates/transport", version = "2.0.0" }
daedalus-data = { path = "crates/data", version = "2.0.0" }
daedalus-wgsl-infer = { path = "crates/wgsl-infer", version = "2.0.0" }
daedalus-gpu = { path = "crates/gpu", version = "2.0.0" }
daedalus-registry = { path = "crates/registry", version = "2.0.0" }
daedalus-planner = { path = "crates/planner", version = "2.0.0" }
daedalus-runtime = { path = "crates/runtime", version = "2.0.0" }
daedalus-macros = { path = "crates/macros", version = "2.0.0" }
daedalus-nodes = { path = "crates/nodes", version = "2.0.0" }
daedalus-engine = { path = "crates/engine", version = "2.0.0" }
daedalus-daemon = { path = "crates/daemon", version = "2.0.0" }
daedalus-ffi-core = { path = "crates/ffi/core", version = "2.0.0" }
daedalus-ffi-host = { path = "crates/ffi/host", version = "2.0.0" }
daedalus-ffi-python = { path = "crates/ffi/python", version = "2.0.0" }
daedalus-ffi-node = { path = "crates/ffi/node", version = "2.0.0" }
daedalus-ffi-java = { path = "crates/ffi/java", version = "2.0.0" }
daedalus-ffi-cpp = { path = "crates/ffi/cpp", version = "2.0.0" }
daedalus-plugins-example-project = { path = "examples/plugins/example_project", version = "2.0.0" }
async-trait = "0.1.89"
base64 = "0.22.1"
bitflags = { version = "2.11.1", features = ["serde"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
criterion = "0.8.2"
crossbeam-queue = "0.3.12"
glob = "0.3.3"
half = "2"
libc = "0.2"
libloading = "0.8.9"
once_cell = "1.21.4"
paste = "1.0.15"
pollster = "0.4.0"
proc-macro-crate = "3.5.0"
proc-macro2 = "1.0.106"
proptest = "1.11.0"
pyo3 = "0.28"
quote = "1.0.45"
rand = "0.10.1"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
sha2 = "0.10"
parking_lot = "0.12.5"
smallvec = { version = "1.15.1", features = ["serde"] }
syn = { version = "2.0.117", features = ["full"] }
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt", "macros", "sync"] }
trybuild = "1.0.116"
wgpu = { version = "29.0.1", default-features = false, features = ["std", "wgsl", "vulkan", "gles"] }
futures-util = { version = "0.3.32", default-features = false, features = ["std"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "std"] }
styx = { version = "2.0.0", git = "https://github.com/Prometheus-Dynamics/Styx.git", branch = "main", default-features = false }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
unused_lifetimes = "deny"
unused_attributes = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"

[workspace.metadata.prometheus-dependency-policy]
error_handling = "Library crates use thiserror for typed errors."
instrumentation = "Structured instrumentation uses tracing."
centralization = "Shared internal crates and common third-party crates belong in workspace.dependencies."
implementation_variants = [
    "Daedalus keeps gpu-mock and gpu-wgpu as stable feature-gated backend variants.",
]
allowed_manifest_exceptions = [
    "crates/engine keeps explicit path dependencies for daedalus-runtime, daedalus-planner, and daedalus-registry because Cargo workspace inheritance cannot combine workspace = true with default-features = false under the current shared root declarations.",
]
