[package]
name = "daedalus-rs"
version = "2.0.0"
edition = "2024"
description = "Facade crate for the Daedalus dataflow runtime (CPU/GPU node graphs)."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-rs"
readme = "README.md"
keywords = ["dataflow", "graph", "gpu", "wgpu", "pipeline"]
categories = ["concurrency", "graphics"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"
name = "daedalus"
doctest = false

[features]
default = []
gpu-types = ["dep:daedalus-gpu"]
gpu-runtime = [
    "gpu-types",
    "daedalus-registry/gpu",
    "daedalus-planner/gpu",
    "daedalus-runtime/gpu",
]
gpu-engine = [
    "gpu-runtime",
    "engine",
    "daedalus-engine/gpu",
]
gpu = ["gpu-engine"]
gpu-wgpu = ["gpu-engine", "daedalus-gpu/gpu-wgpu"]
gpu-async = ["gpu-wgpu", "daedalus-gpu/gpu-async"]
gpu-mock = ["gpu-runtime", "daedalus-gpu/gpu-mock"]
schema = ["daedalus-data/schema", "daedalus-planner/schema"]
proto = ["daedalus-data/proto", "daedalus-planner/proto"]
plugins = ["daedalus-registry/plugin", "daedalus-runtime/plugins", "daedalus-nodes/plugins"]
examples = []
styx-camera-example = ["engine", "plugins", "dep:styx"]
engine = [
    "dep:daedalus-engine",
    "daedalus-engine/executor-pool",
    "daedalus-engine/plugins",
]

[dependencies]
daedalus-core = { workspace = true }
daedalus-transport = { workspace = true }
daedalus-data = { workspace = true }
daedalus-gpu = { workspace = true, optional = true }
daedalus-registry = { workspace = true }
daedalus-planner = { workspace = true }
daedalus-runtime = { workspace = true }
daedalus-macros = { workspace = true }
daedalus-nodes = { workspace = true }
daedalus-engine = { workspace = true, optional = true }
styx = { workspace = true, features = ["v4l2", "libcamera", "preview-window"], optional = true }
paste = { workspace = true }

[dev-dependencies]
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
image = { workspace = true }
serde_json = { workspace = true }
trybuild = { workspace = true }

[[test]]
name = "adapt_macro"
path = "tests/adapt_macro.rs"
required-features = ["plugins"]

[[test]]
name = "fanin_inputs_macro"
path = "tests/fanin_inputs_macro.rs"
required-features = ["plugins"]

[[test]]
name = "stateful_node_isolation"
path = "tests/stateful_node_isolation.rs"
required-features = ["engine", "plugins"]

[[test]]
name = "transport_macro_ui"
path = "tests/transport_macro_ui.rs"
required-features = ["plugins"]
