[package]
name = "daedalus-daemon"
version = "1.0.0"
edition = "2024"
description = "Optional long-lived daemon and CLI for warm Daedalus engine workflows."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-daemon"
readme = "README.md"
keywords = ["dataflow", "daemon", "engine"]
categories = ["concurrency"]

[lib]
path = "src/lib.rs"

[features]
default = []
tcp = []

[dependencies]
daedalus-engine = { workspace = true }
daedalus-planner = { workspace = true }
daedalus-registry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
daedalus-data = { workspace = true }
