[package]
name = "daedalus-data"
version = "2.0.0"
edition = "2024"
description = "Type/value model and serialization helpers for Daedalus node ports."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-data"
readme = "README.md"
keywords = ["dataflow", "serialization", "schema"]
categories = ["encoding", "data-structures"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["json"]
schema = ["dep:serde_json"]
proto = []
gpu = ["daedalus-gpu"]
async = []
json = ["base64", "dep:serde_json"]

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
daedalus-gpu = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
once_cell = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "resolver"
harness = false
