[package]
name = "daedalus-ffi"
version.workspace = true
edition.workspace = true
description = "FFI helpers and language bridges for Daedalus plugins."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-ffi"
readme = "README.md"
keywords = ["ffi", "plugins", "dataflow"]
categories = ["api-bindings"]

[lints]
workspace = true

[features]
default = ["plugins"]
plugins = []
image-payload = ["dep:image"]
inline_py = ["pyo3"]
gpu = ["daedalus-runtime/gpu"]
gpu-wgpu = [
    "gpu",
    "image-payload",
    "dep:daedalus-gpu",
    "daedalus-gpu/gpu-wgpu",
    "dep:wgpu",
]

[lib]
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[dependencies]
daedalus-runtime = { workspace = true, features = ["plugins"] }
daedalus-registry = { workspace = true }
daedalus-planner = { workspace = true }
daedalus-core = { workspace = true }
daedalus-data = { workspace = true }
daedalus-transport = { workspace = true }
daedalus-gpu = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
libloading = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
pyo3 = { workspace = true, optional = true, features = ["auto-initialize"] }
base64 = { workspace = true }
image = { workspace = true, optional = true }

[dev-dependencies]
daedalus = { workspace = true, features = ["engine", "plugins", "ffi", "gpu"] }
daedalus-plugins-example-project = { workspace = true }
paste = { workspace = true }
