[package]
name = "daedalus-gpu"
version = "2.0.0"
edition = "2024"
description = "GPU backends and WGSL dispatch helpers for the Daedalus runtime."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-gpu"
readme = "README.md"
keywords = ["gpu", "wgsl", "wgpu", "compute"]
categories = ["graphics"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = ["gpu-noop"]
gpu-noop = []
gpu-mock = []
gpu-wgpu = ["wgpu", "pollster", "bytemuck", "half", "daedalus-wgsl-infer", "image"]
gpu-async = ["async-trait"]
image = ["dep:image"]

[dependencies]
serde = { workspace = true }
async-trait = { workspace = true, optional = true }
bitflags = { workspace = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
image = { workspace = true, optional = true }
half = { workspace = true, optional = true }
daedalus-wgsl-infer = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
bytemuck = { workspace = true }

[[bench]]
name = "dispatch_readback"
harness = false
required-features = ["gpu-wgpu"]
