[package]
name = "daedalus-macros"
version = "2.0.0"
edition = "2024"
description = "Proc macros for Daedalus nodes and GPU binding helpers."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-macros"
readme = "README.md"
keywords = ["proc-macro", "macros", "gpu"]
categories = ["development-tools::procedural-macro-helpers"]

[lints]
workspace = true

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
daedalus-runtime = { workspace = true }
proc-macro-crate = { workspace = true }
daedalus-wgsl-infer = { workspace = true }
