[package]
name = "daedalus-nodes"
version = "0.1.0"
edition = "2024"
description = "Demo node implementations and fixtures for Daedalus."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-nodes"
readme = "README.md"
keywords = ["dataflow", "nodes", "fixtures"]
categories = ["development-tools::testing"]

[lib]
path = "src/lib.rs"

[features]
default = []
examples = ["bundle-starter"]
bundle-starter = []
registry-adapter = []
planner-adapter = []
bundle-utils = []
plugins = []

[dependencies]
daedalus-macros = { version = "0.1.0", path = "../macros" }
daedalus-registry = { version = "0.1.0", path = "../registry" }
daedalus-planner = { version = "0.1.0", path = "../planner" }
daedalus-runtime = { version = "0.1.0", path = "../runtime", features = ["plugins"] }
daedalus-data = { version = "0.1.0", path = "../data" }
daedalus-core = { version = "0.1.0", path = "../core" }
paste = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
trybuild = { workspace = true }
daedalus-data = { version = "0.1.0", path = "../data" }
daedalus-planner = { version = "0.1.0", path = "../planner" }
daedalus-runtime = { version = "0.1.0", path = "../runtime" }
