[package]
name = "daedalus-planner"
version = "0.1.1"
edition = "2024"
description = "Planner that validates and schedules Daedalus dataflow graphs."
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/daedalus-planner"
readme = "README.md"
keywords = ["dataflow", "graph", "planner"]
categories = ["algorithms"]

[lib]
path = "src/lib.rs"

[features]
default = []
gpu = ["daedalus-gpu"]
proto = []
schema = []

[dependencies]
daedalus-data = { version = "0.1.1", path = "../data" }
daedalus-registry = { version = "0.1.1", path = "../registry" }
daedalus-gpu = { version = "0.1.1", path = "../gpu", optional = true }
daedalus-core = { version = "0.1.1", path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
daedalus-data = { version = "0.1.1", path = "../data" }
